# individual_tooth_segmentation

./: .gitignore  README.md  main.py  pyproject.toml
config/: default.yaml
src/: gadf.py  makeup.py  myTools.py  reinitial.py  reinst.py  teethSeg.py
src/_networks/: layers.py  model.py  resnest.py  resnet.py  splat.py
src/network/: dataset.py  model.py  resnest.py  resnet.py  splat.py
